detalles landing page

--- a/src/app/home/components/contact/contact.component.html
+++ b/src/app/home/components/contact/contact.component.html
@@ -1,4 +1,40 @@
-<div class="main-container">
-    <p>contact works!</p>
+<div class="prueba">
+    <div class="main-container">
+        <h2>Contáctanos</h2>
+        <div class="contact-form-container">
+            <form action="">
+                <label for="Nombre">Nombre</label>
+                <input type="text" id="Nombre">
+                <label for="Email">Email</label>
+                <input type="email" id="Email">
+                <label for="Telefono">Telefono</label>
+                <input type="tel" id="Telefono">
+                <label for="Mensaje">Mensaje</label>
+                <textarea id="Mensaje" name="Mensaje" rows="8" cols="50"></textarea>
+                <button type="submit">Enviar</button>
+            </form>
+        </div>
+        <div class="info-container">
+            <div class="info-text">
+                <h3>Para mayor información de nuestros servicios comuníquese con nosotros. ¡Será un gusto atenderlo!</h3>
+            </div>
+            <div class="phone">
+                <p class="title">Telefonos:</p>
+                <p><span class="flaticon-003-whatsapp"></span><a target="_blank" href="https://wa.me/573003006831">+57 3108045337</a></p>
+                <p><span class="material-icons">phone</span>+57 3003006831</p>
+            </div>
+            <div class="email">
+                <p class="title">E-mail:</p>
+                <p>
+                    <span class="material-icons">mail</span>
+                    <a target="_blank" href="mailto:comercial@chym-ndt.com">comercial@chym-ndt.com</a>
+                </p>
+            </div>
+            <div class="location">
+                <p class="title">Ubicación</p>
+                <p><span class="material-icons">location_on</span>Barranquilla - Colombia</p>
+            </div>
+        </div>
+    </div>
 </div>
 
