--- a/src/app/home/components/courses/courses.component.html
+++ b/src/app/home/components/courses/courses.component.html
@@ -1,3 +1,240 @@
-<section class="courses-container">
-    <h2>aqui van los cursos</h2>
+<section class="main-container">
+    <h2>nuestros cursos</h2>
+    <div class="courses-container">
+        <div class="single-course">
+            <div class="course-image">
+                <img src="https://chym-elearning.com/courses/VTII/course-pic.png" alt="" loading="lazy">
+                <span class="category">Ensayos no destructivos</span>
+                <div class="cribbon"></div>
+                <div class="course-info">
+                    <span (click)="openDialog('hola')" class="material-icons">info</span>
+                </div>
+            </div>
+            <div class="course-detail">
+                <h3>Inspección Visual Nivel I/II</h3>
+                <div class="ranking">
+                    <star-rating [starType]="'svg'" [rating]="3.8" [staticColor]="'ok'" [step]="0.5" [showHalfStars]="true"></star-rating>
+                    <p>80 votos | 25 visitas</p>
+                </div>
+                <div class="profesor-info">
+                    <img 
+                        src="https://chym-elearning.com/app/upload/users/1/1168/small_1168_5f7e7d11ecfc6_Solo-Logo-alta.jpg?rand=602831cae60a8"alt="">
+                    <p>Profesor: <span>Geovanny Alvarez</span></p>
+                </div>
+            </div>
+        </div>
+        <div class="single-course">
+            <div class="course-image">
+                <img src="https://chym-elearning.com/courses/INTROEND/course-pic.png" alt="" loading="lazy">
+                <span class="category">Ensayos no destructivos</span>
+                <div class="cribbon"></div>
+                <div class="course-info">
+                    <span class="material-icons">info</span>
+                </div>
+            </div>
+            <div class="course-detail">
+                <h3>Introduccion a los Ensayos No Destructivos</h3>
+                <div class="ranking">
+                    <star-rating [starType]="'svg'" [rating]="3.63" [staticColor]="'ok'" [step]="0.5" [showHalfStars]="true"></star-rating>
+                    <p>80 votos | 25 visitas</p>
+                </div>
+                <div class="profesor-info">
+                    <img src="https://chym-elearning.com/app/upload/users/1/1168/small_1168_5f7e7d11ecfc6_Solo-Logo-alta.jpg?rand=602831cae60a8" alt="">
+                    <p>Profesor: <span>Geovanny Alvarez</span></p>
+                </div>
+            </div>
+        </div>
+        <div class="single-course">
+            <div class="course-image">
+                <img src="https://chym-elearning.com/courses/METAC/course-pic.png" alt="" loading="lazy">
+                <span class="category">Materiales</span>
+                <div class="cribbon"></div>
+                <div class="course-info">
+                    <span class="material-icons">info</span>
+                </div>
+            </div>
+            <div class="course-detail">
+                <h3>Metalurgía del acero</h3>
+                <div class="ranking">
+                    <star-rating [starType]="'svg'" [rating]="4" [staticColor]="'ok'" [step]="0.5" [showHalfStars]="true"></star-rating>
+                    <p>80 votos | 25 visitas</p>
+                </div>
+                <div class="profesor-info">
+                    <img src="https://chym-elearning.com/app/upload/users/1/1168/small_1168_5f7e7d11ecfc6_Solo-Logo-alta.jpg?rand=602831cae60a8" alt="">
+                    <p>Profesor: <span>Geovanny Alvarez</span></p>
+                </div>
+            </div>
+        </div>
+
+        <div class="single-course">
+            <div class="course-image">
+                <img src="https://chym-elearning.com/courses/VTII/course-pic.png" alt="" loading="lazy">
+                <span class="category">Ensayos no destructivos</span>
+                <div class="cribbon"></div>
+                <div class="course-info">
+                    <span class="material-icons">info</span>
+                </div>
+            </div>
+            <div class="course-detail">
+                <h3>Inspección Visual Nivel I/II</h3>
+                <div class="ranking">
+                    <star-rating [starType]="'svg'" [rating]="5" [staticColor]="'ok'" [step]="0.5" [showHalfStars]="true"></star-rating>
+                    <p>80 votos | 25 visitas</p>
+                </div>
+                <div class="profesor-info">
+                    <img src="https://chym-elearning.com/app/upload/users/1/1168/small_1168_5f7e7d11ecfc6_Solo-Logo-alta.jpg?rand=602831cae60a8" alt="">
+                    <p>Profesor: <span>Geovanny Alvarez</span></p>
+                </div>
+            </div>
+        </div>
+        <div class="single-course">
+            <div class="course-image">
+                <img src="https://chym-elearning.com/courses/INTROEND/course-pic.png" alt="" loading="lazy">
+                <span class="category">Ensayos no destructivos</span>
+                <div class="cribbon"></div>
+                <div class="course-info">
+                    <span class="material-icons">info</span>
+                </div>
+            </div>
+            <div class="course-detail">
+                <h3>Introduccion a los Ensayos No Destructivos</h3>
+                <div class="ranking">
+                    <star-rating [starType]="'svg'" [rating]="4.63" [staticColor]="'ok'" [step]="0.5" [showHalfStars]="true"></star-rating>
+                    <p>80 votos | 25 visitas</p>
+                </div>
+                <div class="profesor-info">
+                    <img src="https://chym-elearning.com/app/upload/users/1/1168/small_1168_5f7e7d11ecfc6_Solo-Logo-alta.jpg?rand=602831cae60a8" alt="">
+                    <p>Profesor: <span>Geovanny Alvarez</span></p>
+                </div>
+            </div>
+        </div>
+        <div class="single-course">
+            <div class="course-image">
+                <img src="https://chym-elearning.com/courses/METAC/course-pic.png" alt="" loading="lazy">
+                <span class="category">Materiales</span>
+                <div class="cribbon"></div>
+                <div class="course-info">
+                    <span class="material-icons">info</span>
+                </div>
+            </div>
+            <div class="course-detail">
+                <h3>Metalurgía del acero</h3>
+                <div class="ranking">
+                    <star-rating [starType]="'svg'" [rating]="2.63" [staticColor]="'ok'" [step]="0.5" [showHalfStars]="true"></star-rating>
+                    <p>80 votos | 25 visitas</p>
+                </div>
+                <div class="profesor-info">
+                    <img src="https://chym-elearning.com/app/upload/users/1/1168/small_1168_5f7e7d11ecfc6_Solo-Logo-alta.jpg?rand=602831cae60a8" alt="">
+                    <p>Profesor: <span>Geovanny Alvarez</span></p>
+                </div>
+            </div>
+        </div>
+
+        <div class="single-course">
+            <div class="course-image">
+                <img src="https://chym-elearning.com/courses/VTII/course-pic.png" alt="" loading="lazy">
+                <span class="category">Ensayos no destructivos</span>
+                <div class="cribbon"></div>
+                <div class="course-info">
+                    <span class="material-icons">info</span>
+                </div>
+            </div>
+            <div class="course-detail">
+                <h3>Inspección Visual Nivel I/II</h3>
+                <div class="ranking">
+                    <star-rating [starType]="'svg'" [rating]="3" [staticColor]="'ok'" [step]="0.5" [showHalfStars]="true"></star-rating>
+                    <p>80 votos | 25 visitas</p>
+                </div>
+                <div class="profesor-info">
+                    <img src="https://chym-elearning.com/app/upload/users/1/1168/small_1168_5f7e7d11ecfc6_Solo-Logo-alta.jpg?rand=602831cae60a8" alt="">
+                    <p>Profesor: <span>Geovanny Alvarez</span></p>
+                </div>
+            </div>
+        </div>
+        <div class="single-course">
+            <div class="course-image">
+                <img src="https://chym-elearning.com/courses/INTROEND/course-pic.png" alt="" loading="lazy">
+                <span class="category">Ensayos no destructivos</span>
+                <div class="cribbon"></div>
+                <div class="course-info">
+                    <span class="material-icons">info</span>
+                </div>
+            </div>
+            <div class="course-detail">
+                <h3>Introduccion a los Ensayos No Destructivos</h3>
+                <div class="ranking">
+                    <star-rating [starType]="'svg'" [rating]="4.63" [staticColor]="'ok'" [step]="0.5" [showHalfStars]="true"></star-rating>
+                    <p>80 votos | 25 visitas</p>
+                </div>
+                <div class="profesor-info">
+                    <img src="https://chym-elearning.com/app/upload/users/1/1168/small_1168_5f7e7d11ecfc6_Solo-Logo-alta.jpg?rand=602831cae60a8" alt="">
+                    <p>Profesor: <span>Geovanny Alvarez</span></p>
+                </div>
+            </div>
+        </div>
+        <div class="single-course">
+            <div class="course-image">
+                <img src="https://chym-elearning.com/courses/METAC/course-pic.png" alt="" loading="lazy">
+                <span class="category">Materiales</span>
+                <div class="cribbon"></div>
+                <div class="course-info">
+                    <span class="material-icons">info</span>
+                </div>
+            </div>
+            <div class="course-detail">
+                <h3>Metalurgía del acero</h3>
+                <div class="ranking">
+                    <star-rating [starType]="'svg'" [rating]="3.63" [staticColor]="'ok'" [step]="0.5" [showHalfStars]="true"></star-rating>
+                    <p>80 votos | 25 visitas</p>
+                </div>
+                <div class="profesor-info">
+                    <img src="https://chym-elearning.com/app/upload/users/1/1168/small_1168_5f7e7d11ecfc6_Solo-Logo-alta.jpg?rand=602831cae60a8" alt="">
+                    <p>Profesor: <span>Geovanny Alvarez</span></p>
+                </div>
+            </div>
+        </div>
+
+        <div class="single-course">
+            <div class="course-image">
+                <img src="https://chym-elearning.com/courses/VTII/course-pic.png" alt="" loading="lazy">
+                <span class="category">Ensayos no destructivos</span>
+                <div class="cribbon"></div>
+                <div class="course-info">
+                    <span class="material-icons">info</span>
+                </div>
+            </div>
+            <div class="course-detail">
+                <h3>Inspección Visual Nivel I/II</h3>
+                <div class="ranking">
+                    <star-rating [starType]="'svg'" [rating]="3.5" [staticColor]="'ok'" [step]="0.5" [showHalfStars]="true"></star-rating>
+                    <p>80 votos | 25 visitas</p>
+                </div>
+                <div class="profesor-info">
+                    <img src="https://chym-elearning.com/app/upload/users/1/1168/small_1168_5f7e7d11ecfc6_Solo-Logo-alta.jpg?rand=602831cae60a8" alt="">
+                    <p>Profesor: <span>Geovanny Alvarez</span></p>
+                </div>
+            </div>
+        </div>
+        <div class="single-course">
+            <div class="course-image">
+                <img src="https://chym-elearning.com/courses/INTROEND/course-pic.png" alt="" loading="lazy">
+                <span class="category">Ensayos no destructivos</span>
+                <div class="cribbon"></div>
+                <div class="course-info">
+                    <span class="material-icons">info</span>
+                </div>
+            </div>
+            <div class="course-detail">
+                <h3>Introduccion a los Ensayos No Destructivos</h3>
+                <div class="ranking">
+                    <star-rating [starType]="'svg'" [rating]="2.5" [staticColor]="'ok'" [step]="0.5" [showHalfStars]="true"></star-rating>
+                    <p>80 votos | 25 visitas</p>
+                </div>
+                <div class="profesor-info">
+                    <img src="https://chym-elearning.com/app/upload/users/1/1168/small_1168_5f7e7d11ecfc6_Solo-Logo-alta.jpg?rand=602831cae60a8" alt="">
+                    <p>Profesor: <span>Geovanny Alvarez</span></p>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
