--- a/src/app/home/components/header/header.component.html
+++ b/src/app/home/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
     <section class="header-container">
         <div class="logo-container">
-            <a routerLink="/"><img src="../assets/img/header-logo-custom1.png" alt="logo de mi blog"></a>
+            <a routerLink="/"><img src="../assets/img/header-logo-custom1.png" alt="logo CHM"></a>
         </div>
         <div class="icons-container">
             <div class="icons">
