--- a/src/app/home/components/hero/hero.component.html
+++ b/src/app/home/components/hero/hero.component.html
@@ -1,12 +1,7 @@
 <section class="main-container">
+    <h2>Bienvenido a <br><span>CH & M e-Learning!</span></h2>
     <div class="main-text">
-        <h2>Bienvenido a <span>CH&M e-Learning!</span></h2>
         <p>Le damos la bienvenida a nuestra plataforma de aprendizaje electrónico. Es un placer inmenso para nosotros contar con usted en nuestros cursos de formación, capacitación y calificación, en donde podrá interactuar con tutores y demás participantes, con el fin de apoyar su proceso formativo.</p>
-        <!-- <p>Para mayor información de nuestros servicios comuníquese con nosotros por medio de nuestra página web: www.chym-ndt.com, correo: comercial@chym-ndt.com; o WhatsApp: +57 3108045337. ¡Será un gusto atenderlo!</p> -->
-        <div class="main-register">
-            <p>Fórmese online con nosotros y <strong>¡acelere su carrera profesional!</strong></p>
-            <a routerLink="/home/register">Crear Cuenta</a>
-        </div>
     </div>
     <div class="video-container">
         <div class="yt-frame">
@@ -19,5 +14,9 @@
                 </iframe>
             </div>
         </div>
+    </div>
+    <div class="main-register">
+        <p>Fórmese online con nosotros y <strong>¡acelere su carrera profesional!</strong></p>
+        <a routerLink="/home/register">Crear Cuenta</a>
     </div>
 </section>
