--- a/src/app/home/components/nav/nav.component.html
+++ b/src/app/home/components/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav>
+<nav [class]="sticky">
     <div class="menu-button-container" (click)="classToogle()">
         <span class="material-icons">{{ icon }}</span>
         <p>{{ menuText }}</p>
