--- a/src/app/home/components/auth/recover/recover.component.html
+++ b/src/app/home/components/auth/recover/recover.component.html
@@ -1,3 +1,15 @@
 <app-header></app-header>
 <app-nav></app-nav>
-<p>recover works!</p>
+<div class="main-container">
+    <div class="recover-container">
+        <div class="recover" id="recover">
+            <form action="">
+                <h2>¿Olvido su contraseña?</h2>
+                <p>Le enviaremos un correo con instrucciones para cambiarla.</p>
+                <input type="email" placeholder="Su email">
+                <button type="submit">Recuperar</button>
+            </form>
+        </div>
+    </div>
+</div>
+<app-footer></app-footer>
