--- a/src/app/home/components/contact/contact.component.scss
+++ b/src/app/home/components/contact/contact.component.scss
@@ -1,4 +1,186 @@
 .main-container {
-    height: 200px;
-    background: var(--secondary1);
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 50px 1fr;
+    margin: 50px;
+    border-radius: 20px;
+    box-shadow: 2px 2px 10px #999;
+    position: relative;
+}
+
+.main-container::after {
+    content: "";
+    background: url(https://chym-ndt.com/gallery_gen/5adcf5614519d22a094e8a93f1f9dcff.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: left 0 top 0;
+    border-radius: 20px;
+    opacity: 0.4;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index: -1;
+}
+
+.main-container h2 {
+    background: var(--main-color2);
+    color: white;
+    font-weight: 700;
+    align-self: center;
+    justify-self: center;
+    grid-column: 1 / 3;
+    padding: 16px 64px;
+    text-transform: uppercase;
+    border: 5px solid #b0bec5;
+    border-radius: 40px 0px 40px 6px;
+    text-shadow: -3px 3px 9px rgba(4,106,121,0.81);
+}
+
+.contact-form-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 50px 20px;
+}
+.contact-form-container h3 {
+    margin-left: 100px;
+    align-self: flex-start;
+    font-size: 1.5rem;
+    font-weight: 700;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+}
+.contact-form-container form {
+    display: flex;
+    flex-direction: column;
+    margin: 30px;
+    width: 80%;
+}
+.contact-form-container form label {
+    color: var(--main-color2);
+    font-size: 1rem;
+    font-weight: 600;
+    margin-left: 12px;
+}
+.contact-form-container form input {
+    margin: 10px;
+    height: 30px;
+    width: 80%;
+    border: 1px solid var(--main-color2);
+    padding-left: 16px;
+    color: var(--main-color2);
+    border-radius: 3px;
+}
+.contact-form-container form input:focus {
+    outline: none;
+    border: 2px solid var(--main-color1);
+}
+.contact-form-container form input::placeholder {
+    color: var(--main-color-rgb1);
+    padding-left: 5px;
+}
+.contact-form-container form textarea {
+    margin: 10px;
+    width: 80%;
+    border: 1px solid var(--main-color2);
+    padding-left: 16px;
+    color: var(--main-color2);
+    border-radius: 3px;
+}
+.contact-form-container form button {
+    width: 120px;
+    height: 40px;
+    align-self: flex-end;
+    background: var(--main-color2);
+    color: white;
+    margin-top: 20px;
+    margin-right: 110px;
+    cursor: pointer;
+    border: 1px solid white;
+    border-radius: 5px;
+    font-weight: 700;
+    font-size: 1.1rem;
+    padding: 5px;
+}
+.info-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 20px 30px;
+}
+.info-container .title {
+    font-size: 1rem;
+    font-weight: 600;
+    margin: 20px 0;
+}
+.info-container span {
+    font-size: 25px;
+    margin-right: 25px;
+    color: var(--main-color2);
+}
+[class^="flaticon-"]:before, [class*=" flaticon-"]:before, [class^="flaticon-"]:after, [class*=" flaticon-"]:after {
+    font-size: 24px !important;
+    font-style: normal;
+    margin-left: 0 !important;
+    color: var(--main-color2);
+}
+.info-container .info-text {
+    margin-bottom: 20px;
+}
+.info-container .info-text h3 {
+    color: black;
+    font-size: 1.1rem;
+    margin: 0;
+    text-align: justify;
+}
+.info-container p {
+    display: flex;
+}
+@media (max-width: 800px) {
+    .main-container {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 50px 1fr 1fr;
+    }
+    .main-container h2 {
+        grid-column: 1 / 1;
+        padding: 16px 64px;
+    }
+    .main-container::after {
+        background-position: 60% 60%;
+        background-size: cover;
+    }
+    .contact-form-container {
+        margin: 20px 20px;
+    }
+    .contact-form-container form {
+        display: flex;
+        flex-direction: column;
+        margin: 20px 0;
+        width: 80%;
+    }
+    .contact-form-container h3 {
+        margin-left: 40px;
+    }
+    .info-container {
+        margin: 20px 80px;
+    }
+}
+@media (max-width: 500px) {
+    .main-container {
+        margin: 30px;
+    }
+    .main-container h2 {
+        font-size: 1rem;
+        padding: 12px 64px;
+        border: 4px solid #b0bec5;
+    }
+    .contact-form-container form {
+        width: 100%;
+    }
+    .info-container {
+        margin: 20px 30px;
+    }
 }
