--- a/src/app/home/components/hero/hero.component.scss
+++ b/src/app/home/components/hero/hero.component.scss
@@ -1,80 +1,62 @@
 .main-container {
     margin: 50px;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
+    grid-template-rows: 64px 160px 1fr 160px;
     gap: 0 32px;
+    align-items: center;
+    border-radius: 20px;
+    box-shadow: 2px 2px 10px #999;
+    background: var(--secondary1);
 }
 
-.main-container .main-text {
-    margin-top: 32px;
-    margin-left: 32px;
-    text-align: justify;
-    font-size: 18px;
-    width: 90%;
-    color: var(--main-color2);
-}
-
-.main-container .main-text h2 {
-    font-size: 1.5rem;
+.main-container h2 {
+    font-size: 1.6rem;
+    justify-self: center;
     font-weight: 700;
     letter-spacing: 1px;
+    color: var(--main-color2);
+    margin-top: 60px;
 }
 
-.main-container .main-text h2 span {
+.main-container h2 br {
+    display: none;
+}
+
+.main-container h2 span {
     background: var(--secondary1);
     padding: 4px 8px;
     border-radius: 5px;
 }
 
+.main-text {
+    width: 80%;
+    margin-top: 30px;
+    color: black;
+    justify-self: center;
+}
+
 .main-container .main-text p {
     font-size: 1.3rem;
-    line-height: 30px;
-}
-
-.main-container .main-text a {
-    text-decoration: none;
-    color: white;
-    background: var(--main-color1);
-    padding: 8px 15px;
-    border-radius: 5px;
-    font-weight: 600;
-    letter-spacing: 2px;
-    cursor: pointer;
-}
-
-.main-container .main-text .main-register {
-    margin-top: 24px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background: var(--secondary1);
-    //width: 90%;
-    padding: 20px;
-    overflow: hidden;
-    border-radius: 5px;
-    box-shadow: 2px 2px 10px #999;
-}
-
-.main-container .main-text .main-register p {
-    margin-bottom: 20px;
+    line-height: 24px;
+    text-align: justify;
 }
 
 .video-container {
     display: flex;
     align-items: center;
+    width: 40%;
+    justify-self: center;
 }
 
-.main-container .yt-frame {
-    // background: rgba(180,180,180, 0.4);
-    // border-radius: 8px;
-    // box-shadow: 2px 2px 10px #999;
+.video-container .yt-frame {
     box-sizing: border-box;
     margin: 32px 0 16px 0;
     padding: 16px;
     width: 100%;
 }
 
-.main-container .yt-frame .yt-video {
+.video-container .yt-frame .yt-video {
     height: 0;
     padding-bottom: 56.25%;
     overflow: hidden;
@@ -82,7 +64,7 @@
     vertical-align: middle;
 }
 
-.main-container .yt-frame
+.video-container .yt-frame
 .yt-video iframe,
 .yt-video object,
 .yt-video embed {
@@ -93,73 +75,152 @@
     width: 100%;
 }
 
-@media (max-width: 1112px) {
-    .main-container {
-        margin: 30px;
-        gap: 0 20px;
-        font-size: 1rem;
-    }
+.main-register {
+    background: var(--main-color-rgb1);
+    color: var(--main-color2);
+    width: 100%;
+    padding: 11px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-self: flex-end;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+}
 
-    .main-container .main-text h2 {
-        letter-spacing: 0;
+.main-register p {
+    font-size: 1.5rem;
+    font-weight: 700;
+    letter-spacing: 2px;
+    margin-top: 16px;
+    margin-bottom: 24px;
+    justify-self: center;
+    text-align: center;
+}
+
+.main-register a {
+    text-decoration: none;
+    color: white;
+    background: var(--main-color2);
+    border: 1px solid var(--secondary1);
+    padding: 12px 24px;
+    border-radius: 5px;
+    font-weight: 600;
+    font-size: 1.1rem;
+    letter-spacing: 2px;
+    cursor: pointer;
+    margin: 16px;
+}
+
+.main-register a:hover {
+    background: var(--main-color-rgb1);
+    border: 1px solid var(--main-color2);
+}
+
+@media (max-width: 980px) {
+    .main-register p {
         font-size: 1.3rem;
+        font-weight: 700;
+        letter-spacing: normal;
+        margin-top: 16px;
+        margin-bottom: 24px;
     }
 
-    .main-container .main-text p {
-        line-height: normal;
+    .video-container {
+        width: 70%;
     }
 }
 
-@media (max-width: 868px) {
-    .main-container .main-text {
-        margin: 0;
+@media (max-width: 750px) {
+    .main-container {
+        grid-template-rows: 64px 200px 1fr 160px;
     }
 
-    .main-container .main-text h2 {
+    .video-container {
+        width: 80%;
+    }
+
+    .main-register p {
         font-size: 1.1rem;
     }
-
-    .main-container .main-text p {
-        font-size: 1rem;
-    }
-
-    .main-container .main-text .main-register {
-        padding: 20px;
-    }
 }
 
-@media (max-width: 769px) {
+@media (max-width: 620px) {
     .main-container {
-        display: flex;
-        flex-direction: column;
-        margin-top: 10px;
+        grid-template-rows: 64px 250px 1fr 160px;
     }
 
-    .main-container .main-text {
-        margin: 0;
-        //width: 80%;
-        padding: 20px;
+    .main-container h2 {
+        font-size: 1.4rem;
     }
 
-    .main-container .main-text h2 {
+    .video-container {
+        width: 90%;
+    }
+
+    .main-register p {
         font-size: 1rem;
+        margin-left: 16px;
+        margin-right: 16px;
+    }
+}
+
+@media (max-width: 520px) {
+    .main-container {
+        grid-template-rows: 64px 280px 1fr 160px;
+        margin: 30px;
+    }
+
+    .main-container h2 {
+        font-size: 1.25rem;
+        //width: 80%;
+        text-align: center;
     }
 
     .main-container .main-text p {
-        font-size: 0.98rem;
+        font-size: 1.2rem;
+        line-height: normal;
     }
 
-    .main-container .main-text .main-register {
-        margin-top: 20px;
-        padding: 25px;
+    .video-container {
+        width: 90%;
     }
 
-    .main-container .main-text .main-register p {
-        padding: 5px;
+    .main-register p {
+        margin-bottom: 8px;
     }
-
-
 }
+
+@media (max-width: 480px) {
+    .main-container {
+        grid-template-rows: 80px 320px 1fr 160px;
+    }
+
+    .main-container h2 {
+        font-size: 1.25rem;
+        width: 80%;
+        text-align: center;
+    }
+
+    .main-container h2 br {
+        display: initial;
+    }
+
+    .video-container {
+        width: 90%;
+    }
+
+    .video-container .yt-frame {
+        margin: 16px 0 16px 0;
+    }
+
+    .main-register p {
+        margin-bottom: 8px;
+    }
+}
+
+
+
 
 
 
