--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,11 +5,11 @@
 @import '../node_modules/css-star-rating/css/star-rating.css';
 
 :root {
-    --main-color1: #01c2d8;
-    --main-color2: #046a79;
+    --main-color1: #50C0DF;
+    --main-color2: #007279;
     --secondary1: #eceff1;
-    --main-color-rgb1: rgba(1, 194, 216, 0.5);
-    --main-color-rgb2: rgba(4, 106, 121, 0.95);
+    --main-color-rgb1: rgba(80, 192, 223, 0.5);
+    --main-color-rgb2: rgba(0, 114, 121, 0.95);
 }
 
 html {
