--- a/src/app/home/components/courses/courses.component.scss
+++ b/src/app/home/components/courses/courses.component.scss
@@ -143,6 +143,11 @@
     min-height: 56px;
 }
 
+.single-course .course-detail h3 a {
+    text-decoration: none;
+    color: black;
+}
+
 .single-course .course-detail .ranking {
     margin: 5px 20px;
     display: flex;
