--- a/src/app/home/components/header/header.component.scss
+++ b/src/app/home/components/header/header.component.scss
@@ -1,75 +1,75 @@
-// header
 header {
     width: 100%;
-    height: 120px;
+    height: 130px;
     display: grid;
     grid-template-rows: 1fr;
     justify-items: center;
     background: var(--secondary1);
     align-items: center;
 }
-
 header .header-container {
     width: 80%;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-
+.header-container .logo-container {
+    width: 50%;
+}
+header .header-container .logo-container a img {
+    width: 280px;
+}
 header .header-container .icons-container {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    margin-top: 24px;
 }
-
+header .header-container .icons-container .icons {
+    margin-bottom: 8px;
+}
 header .header-container .icons-container span {
     color: var(--main-color-rgb2);
 }
-
 header .header-container .icons-container .follow-us {
     margin: 0;
     text-align: center;
 }
-
 header .header-container .icons-container .text p {
     margin: 0;
     padding: 0;
     color: var(--main-color2);
     font-weight: 600;
 }
-
 header .header-container .icons-container a {
     text-decoration: none;
     display: inline;
     color: black;
 }
-
 @media (max-width: 700px) {
-
     header {
-        height: 200px;
+        height: 220px;
     }
-
     header .header-container {
-        width: 100%;
+        width: 90%;
         flex-direction: column;
         justify-content: center;
-        align-content: center;
+        align-items: center;
     }
-
     header .header-container .logo-container {
-        margin-bottom: 20px;
+        width: 100%;
+        margin-bottom: 0;
     }
-
-    header .header-container .logo-container img {
-        width: 110%;
+    header .header-container .logo-container a {
+        display: flex;
+        justify-content: center;
     }
-
     header .header-container .icons-container {
         flex-direction: column-reverse;
         margin-bottom: 10px;
+        margin-top: 0;
     }
-
     header .header-container .icons-container .text {
         margin-bottom: 15px;
     }
