--- a/src/app/home/components/courses/course-detail/course-detail.component.scss
+++ b/src/app/home/components/courses/course-detail/course-detail.component.scss
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 main {
     display: grid;
     grid-template-columns: 1fr;
@@ -5,7 +9,6 @@ main {
     row-gap: 36px;
     justify-items: center;
     width: 100%;
-    box-sizing: border-box;
 }
 
 .introduction-container {
@@ -15,7 +18,7 @@ main {
     border-radius: 5px;
     -webkit-box-shadow: 0px 5px 10px 3px rgba(76,76,76,0.94);
     box-shadow: 2px 2px 10px #999;
-    padding: 32px;
+    padding: 16px 32px 32px 32px;
     display: grid;
     grid-template-columns: 0.7fr 1fr;
     grid-template-rows: 100px 1fr;
@@ -23,10 +26,29 @@ main {
     grid-template-areas:
     "title title"
     "img text";
+    align-items: center;
 }
 
 .introduction-container .introduction-title {
     grid-area: title;
+}
+
+.introduction-container .introduction-title h1 {
+    font-weight: 600;
+    margin: 8px 0 0 8px;
+    border-bottom: 3px solid var(--main-color2);
+    width: 50%;
+}
+
+.introduction-container .introduction-title p {
+    margin-top: 5px;
+    margin-left: 8px;
+    font-size: 1rem;
+}
+
+.introduction-container .introduction-title p span {
+    font-weight: 600;
+    margin-left: 8px;
 }
 
 .introduction-container .img-container {
@@ -47,25 +69,37 @@ main {
 
 .introduction-container .introduction-text p {
     font-size: 1rem;
+    padding-right: 8px;
 }
 
 .information-container {
     margin-bottom: 36px;
+    padding: 16px 0 32px 0;
     display: grid;
-    grid-template-columns: 2fr 0.5fr;
-    width: 100%;
+    grid-template-columns: 1.5fr 0.7fr;
+    width: 85%;
     column-gap: 16px;
-    justify-items: center;
+    justify-items: start;
 }
 
 .information {
-    width: 80%;
+    width: 95%;
     padding: 32px;
     border: 1px solid var(--secondary1);
     border-radius: 5px;
     -webkit-box-shadow: 0px 5px 10px 3px rgba(76,76,76,0.94);
     box-shadow: 2px 2px 10px #999;
 }
+
+.information h2 {
+    font-weight: 600;
+    font-size: 24px;
+    border-bottom: 3px solid var(--main-color2);
+    width: 80%;
+    margin-left: 8px;
+    margin-bottom: 32px;
+}
+
 .mat-form-field + .mat-form-field {
     margin-left: 8px;
 }
@@ -73,7 +107,7 @@ main {
 mat-panel-title h3 {
     margin-left: 20px;
     font-weight: 500;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     color: var(--main-color2);
     line-height: 24px;
 }
@@ -91,4 +125,130 @@ mat-panel-description {
 mat-expansion-panel p {
     font-size: 1rem;
     margin: 24px 0;
+}
+
+.tutores {
+    max-height: 150px;
+    display: flex;
+    flex-direction: column;
+    padding: 32px;
+    border: 1px solid var(--secondary1);
+    border-radius: 5px;
+    -webkit-box-shadow: 0px 5px 10px 3px rgba(76,76,76,0.94);
+    box-shadow: 2px 2px 10px #999;
+    width: 100%;
+}
+
+.tutores h2 {
+    font-weight: 600;
+    font-size: 24px;
+    border-bottom: 3px solid var(--main-color2);
+    width: 70%;
+    margin-left: 8px;
+    margin-bottom: 16px;
+}
+
+.tutores .tutor-info {
+    display: grid;
+    grid-template-columns: 60px 1fr;
+}
+
+.tutores .tutor-info img {
+    max-width: 90%;
+    height: auto;
+    border-radius: 50%;
+    border: 1px solid var(--secondary1);
+    padding: 8px;
+}
+
+.tutores .tutor-info p {
+    font-size: 1rem;
+    padding-top: 16px;
+}
+
+@media (max-width: 1178px) {
+    .introduction-container .introduction-title h1 {
+        width: 70%;
+    }
+
+    .tutores {
+        max-height: 180px;
+    }
+}
+
+@media (max-width: 980px) {
+
+    main {
+        grid-template-rows: 1fr 1fr;
+    }
+
+    .introduction-container {
+        grid-template-columns: 1fr;
+        grid-template-rows: 100px 1fr 1fr;
+        grid-template-areas:
+        "title"
+        "img"
+        "text";
+    }
+
+    .introduction-container .introduction-title h1 {
+        width: 80%;
+    }
+
+    .information-container {
+        grid-template-columns: 1fr;
+        row-gap: 32px;
+    }
+
+    .information {
+        width: 100%;
+        padding: 32px;
+        border: 1px solid var(--secondary1);
+        border-radius: 5px;
+        -webkit-box-shadow: 0px 5px 10px 3px rgba(76,76,76,0.94);
+        box-shadow: 2px 2px 10px #999;
+    }
+}
+
+@media (max-width: 765px) {
+    .introduction-container .introduction-title h1 {
+        width: 100%;
+    }
+}
+
+@media (max-width: 480px) {
+
+    .introduction-container {
+        grid-template-columns: 1fr;
+        grid-template-rows: 150px 250px 1fr;
+        grid-template-areas:
+        "title"
+        "img"
+        "text";
+    }
+
+    .information {
+        padding: 16px;
+    }
+
+    .information h2 {
+        width: 90%;
+    }
+
+    mat-panel-title h3 {
+        margin-left: 20px;
+        font-weight: 500;
+        font-size: 0.9rem;
+        color: var(--main-color2);
+        line-height: 16px;
+    }
+
+    mat-panel-title span {
+        color: var(--main-color2);
+        font-size: 16px;
+    }
+
+    .tutores h2 {
+        width: 90%;
+    }
 }
